fix overlay on mobile

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -316,7 +316,7 @@ h3 {
   height: 100%;
   justify-content: flex-start;
   left: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
 }
